--- a/style.css
+++ b/style.css
@@ -6,18 +6,18 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.header-image {
+.header__image {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.header-image img {
+.header__image img {
   width: 100%;
 }
 
-.more_inf {
+.header__image-info {
   font-family: fantasy, cursive;
 }
 
@@ -29,7 +29,7 @@ body {
 
 }
 
-.main-wrapper {
+.main__wrapper {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -41,7 +41,7 @@ body {
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+.new__task-wrapper {
   display: flex;
 }
 
@@ -77,7 +77,7 @@ button:hover {
 /* Heading */
 
 h3,
-label[for="new-task"] {
+label[for="new__task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -106,12 +106,12 @@ input[type="text"]:focus {
 
 /* New Task */
 
-label[for="new-task"] {
+label[for="new__task"] {
   display: block;
   margin: 0 0 20px;
 }
 
-#new-task {
+#new__task {
   width: 318px;
 }
 
@@ -165,7 +165,7 @@ li > input[type="text"] {
 
 /* Completed */
 
-#completed-tasks label {
+#completed__tasks label {
   text-decoration: line-through;
   color: #888;
 }
@@ -176,11 +176,11 @@ ul li input[type=text] {
   display: none;
 }
 
-.edit-mode input[type=text] {
+.incompleted__tasks-edit input[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-.edit-mode label {
+.incompleted__tasks-edit label {
   display: none;
 }
